Revert "safari fix "white-space: nowrap;""
This reverts commit 915937ff169fd7a190db795df4f10e7c97e3e845.

--- a/newton-method/custom.css
+++ b/newton-method/custom.css
@@ -71,6 +71,3 @@
     font-family: 'Fira Mono', monospace; 
 }
 
-.reveal section p {
-    white-space: nowrap;
-}
